--- a/SMS Dubai Roads/SMS Dubai Roads-Info.plist
+++ b/SMS Dubai Roads/SMS Dubai Roads-Info.plist
@@ -14,6 +14,11 @@
 	<dict/>
 	<key>CFBundleIdentifier</key>
 	<string>com.springmoon.${PRODUCT_NAME:rfc1034identifier}</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -47,9 +52,9 @@
 				<key>Blue</key>
 				<real>1</real>
 				<key>Green</key>
-				<real>0.80000001192092896</real>
+				<real>0.800000011920929</real>
 				<key>Red</key>
-				<real>0.40000000596046448</real>
+				<real>0.4000000059604645</real>
 			</dict>
 			<key>Translucent</key>
 			<false/>
