--- a/Traffic_Widget/Info.plist
+++ b/Traffic_Widget/Info.plist
@@ -12,6 +12,11 @@
 	<string>com.springmoon.SMS-Dubai-Roads.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
